# OsmoGrep

./: .gitignore  Cargo.toml  README.md  agents.md  call_graph.md  count.sh  count.txt  file.sh  install.sh  ui.rs  watcher.sh
.github/workflows/: ci.yml  release.yml
src/: agent.rs  clipboard.rs  commands.rs  diagnose.rs  git.rs  harness.rs  hooks.rs  logger.rs  machine.rs  main.rs  mcp.rs  persistence.rs  process_runner.rs  shell_guard.rs  state.rs  test_harness.rs  tool_budget.rs  tool_guard.rs  triage.rs  ui.rs  updater.rs  verification.rs  verify_stop.rs  voice.rs  worktree.rs
src/context/: ast.rs  engine.rs  full_suite_context.rs  index.rs  indexer.rs  mod.rs  snapshot.rs  test_snapshot.rs  types.rs
src/detectors/: diff_analyzer.rs  framework.rs  language.rs  mod.rs
src/detectors/ast/: ast.rs  mod.rs  pretty.rs  symboldelta.rs
src/executor/: run.rs
src/llm/: backend.rs  client.rs  mod.rs  ollama.rs  orchestrator.rs  prompt.rs
src/llm_py/: ollama.py
src/testgen/: cache.rs  candidate.rs  file.rs  generator.rs  materialize.rs  mod.rs  resolve.rs  runner.rs  summarizer.rs  test_suite.rs
src/tools/: diagnostics.rs  dynamic_workflow.rs  edit.rs  find_definition.rs  find_references.rs  git_commit.rs  git_diff.rs  git_log.rs  glob.rs  list_dir.rs  mcp_call.rs  mod.rs  notebook_edit.rs  patch.rs  plan.rs  read.rs  regex_search.rs  search.rs  shell.rs  test.rs  web_fetch.rs  web_search.rs  worktree_swarm.rs  write.rs
src/ui/: diff.rs  draw.rs  execution.rs  frame.rs  helper.rs  helpers.rs  main_ui.rs  markdown.rs  mod.rs  panels.rs  runtime.rs  status.rs  terminal.rs  tui.rs
tests/: src_detectors_ast_symboldelta_rs_compute_symbol_delta_regression.rs  src_detectors_diff_analyzer_rs_analyze_file_regression.rs  src_llm_orchestrator_fn run_llm_test_flow_regression.rs  src_llm_orchestrator_rs_run_llm_test_flow_regression.rs  src_machine_fn step_regression.rs  src_state_rs_DiffKind_regression.rs  src_state_rs_TestResult_regression.rs
tools/: ws_reverse_proxy.js
