[package]
name = "osmogrep"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
walkdir = "2"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
similar = "2.6"
sysinfo = "0.37.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
unicode-width = "0.2.2"
sha2 = "0.10.9"
hex = "0.4.3"

