[package]
name = "osmogrep"
version = "0.2.0"
edition = "2021"
authors = ["Kaushal kaushalc64@gmail.com"]
description = "AI-assisted test generation + agentic debugging for code diffs"
license = "MIT"
repository = "https://github.com/kaushal07wick/OsmoGrep"
readme = "README.md"
keywords = ["llm", "agent", "ai", "testing", "developer-tools"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    ".github/",
    "target/",
    "osmogrep.gif",
    "osmogrep.svg"
]


[[bin]]
name = "osmogrep"
path = "src/main.rs"

homepage = "https://github.com/kaushal07wick/OsmoGrep"
documentation = "https://docs.rs/osmogrep"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
walkdir = "2"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
similar = "2.6"
sysinfo = "0.37.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
unicode-width = "0.2.2"
sha2 = "0.10.9"
hex = "0.4.3"
regex = "1.12.2"
uuid = { version = "1.19.0", features = ["v4"] }
glob = "0.3"
toml = "0.8"
viuer = "0.7"
blake2 = "0.10.6"
blake3 = "1.8.3"
base64 = "0.22"
cpal = "0.15"
crossbeam-channel = "0.5"
tungstenite = "0.24"
url = "2.5"
